institutional_model_001/styles.css
:root {
    --primary-color: #0055AA;
    --secondary-color: white;
    --tertiary-color: #004080;
    --quarternary-color: #003366;
    --text-color: black;
    --font-family: Arial, sans-serif;
}

body {
    font-family: var(--font-family);
    margin: 0;
    padding: 0;
    line-height: 1.6;
}

header {
    background-color: var(--secondary-color);
    padding: 20px 40px;
    text-align: center;
    position: sticky;
    top: 0;
}

.header-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 0px 50px;
}

.header-image
{
    width: 300px;
    height: auto;
}

.menu-items > * {
    color: var(--text-color);
    text-decoration: none;
    margin: 0 10px;
    font-size: 1.0rem;
}

.menu-items a.active {
    color: var(--primary-color);
    font-weight: bold;
    border-bottom: var(--primary-color) solid 2px;
    padding-bottom: 10px;
}

nav a:hover {
    color: var(--primary-color);
    font-weight: bold;
    border-bottom: var(--primary-color) solid 2px;
    padding-bottom: 10px;
}

.slider {
    background-color: var(--secondary-color);
    padding: 20px 300px;
    max-width: 100%;
    overflow: hidden;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.prev, .next {
    position: absolute;
    font-size: 2.5vh;
    color: rgba(0, 0, 0, 0.5);
    cursor: pointer;

    transition: color 0.5s ease, background-color 0.5s ease;
}

.prev:hover, .next:hover {
    color: black;
    transition: color 0.5s ease, background-color 0.5s ease;
}

.prev {
    left: 10%;
}

.next {
    right: 10%;
}

.slides {
    position: relative;
    width: 100%;
    height: 100%;
}

.slide {
    width: 100%;
    aspect-ratio: 16 / 9;
    overflow: hidden;

    position: absolute;
    box-sizing: border-box;
    opacity: 0;
    z-index: 0;
    transition: opacity 0.4s ease;
}

.slide.active {
    position: relative;
    opacity: 1;
    z-index: 1;
}

.slide-image {
    width: 100%;
    height: 100%;
    object-fit: fill;
    border-radius: 8px;
    display: block;
}

footer {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    text-align: center;
    padding: 10px 0;
}

footer p {
    margin: 0;
    font-size: 0.9rem;
}

